Fixed issue where topbar was wrapping in a narrow window.

--- a/views/css/app.css
+++ b/views/css/app.css
@@ -8,6 +8,7 @@
 #top-bar-menu {
   background-color: rgb(20,20,20);
   height: 2.5rem;
+  min-width: 705px;
 }
 
 #top-bar-menu li {
